--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,9 @@ button:focus {
 }
 
 .about-pic {
-  width: 240px;
-  max-width: 100%;
+  width: 180px;
+  max-width: 180px;
+  height: auto;
   display: block;
   margin: 0 auto;
 }
