--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   margin: 0;
   line-height: 1.6;
-  background: #f6f1ff;
+  background: #2D1B3A;
   color: #2b1b3a;
 }
 
