--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   margin: 0;
   line-height: 1.6;
-  background: #B9798A;
+  background: #2D1B3A;
   color: #2b1b3a;
 }
 
@@ -54,7 +54,7 @@ img {
 
 footer {
   padding: 16px 0;
-  color: #4a4a5e;
+  color: #f6f1ff;
   text-align: center;
 }
 
